crates/keron-lang/tests/corpus/errors/check/reconcile_chain_step_nested_reconcile.keron
val t: Symlink = symlink(source = "y", target = "x")
val s: Symlink = symlink(source = "b", target = "a")

reconcile if true {
  reconcile t
  s
} else {
  s
}
